--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "stripe": "^12.0.0",
+    "swr": "^2.1.3",
     "tabler-icons-react": "^1.56.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
