--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "framer-motion": "^10.11.5",
     "next": "13.3.1-canary.4",
     "postcss": "8.4.21",
     "react": "18.2.0",
