--- a/package.json
+++ b/package.json
@@ -6,16 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
     "framer-motion": "^10.11.5",
     "next": "13.3.1-canary.4",
     "postcss": "8.4.21",
@@ -26,10 +21,16 @@
     "swr": "^2.1.3",
     "tabler-icons-react": "^1.56.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
+    "autoprefixer": "10.4.14",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.33",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "typescript": "5.0.4",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.7"
   }
