--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "clsx": "^1.2.1",
     "framer-motion": "^10.11.5",
-    "next": "13.3.1-canary.4",
+    "next": "13.3.1-canary.5",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-wrap-balancer": "^0.4.0",
     "stripe": "^12.0.0",
     "swr": "^2.1.3",
     "tabler-icons-react": "^1.56.0",
@@ -24,14 +25,14 @@
     "zustand": "^4.3.7"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.14",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
-    "typescript": "5.0.4",
     "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.7"
+    "prettier-plugin-tailwindcss": "^0.2.7",
+    "typescript": "5.0.4"
   }
 }
