--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "clsx": "^1.2.1",
     "framer-motion": "^10.11.5",
     "next": "13.3.1-canary.5",
@@ -21,6 +23,7 @@
     "stripe": "^12.0.0",
     "swr": "^2.1.3",
     "tabler-icons-react": "^1.56.0",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
     "zustand": "^4.3.7"
   },
