--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-multi-carousel": "^2.8.3",
     "react-wrap-balancer": "^0.4.0",
     "stripe": "^12.0.0",
     "swr": "^2.1.3",
