--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "react-multi-carousel": "^2.8.3",
     "react-wrap-balancer": "^0.4.0",
