--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-select": "^1.2.1",
+    "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "framer-motion": "^10.11.5",
     "next": "13.3.1-canary.5",
